--- a/hlx_statics/blocks/table/table.css
+++ b/hlx_statics/blocks/table/table.css
@@ -14,7 +14,7 @@ main div.table-container {
 
 main div.table {
   max-width: 1280px;
-  padding: 80px 32px;
+  padding: 80px 0px;
   box-sizing: border-box;
   margin: auto;
 }
